source/assets/stylesheets/structures/_post.sass
// *************************************
//
//   Post
//   -> Markdown-compiled article
//
// -------------------------------------
//   Template (Haml)
// -------------------------------------
//
// .post[...]
//
// *************************************

.post

  ol, ul
    padding-left: $b-space

  h2
    margin-bottom: $b-space-s
    margin-top: $b-space

  h3
    margin-bottom: $b-space-s
    margin-top: $b-space

  blockquote
    +font-size( ( l: 24px ) )
    background: $c-highlight
    border-left: 10px solid $c-highlight
    box-sizing: border-box
    color: $c-text-invert
    font-style: italic
    margin: $b-space 0
    padding: $b-space

    > :last-child
      margin-bottom: 0

    a
      @extend .link
      @extend .link--bordered
      @extend .link--inverted

    +respond-to( $g-l )
      max-width: $b-maxWidth
      position: relative
      width: calc( 100vw - #{ $row-gutter--m * 2 } )
      z-index: 1

  code, kbd
    +font-size-s
    background: $c-background-dark
    display: inline-block
    font-family: $b-fontFamily-mono
    padding-left: $b-space-xs
    padding-right: $b-space-xs

  img
    display: block
    margin-left: auto
    margin-right: auto

// -------------------------------------
//   Context
// -------------------------------------

// ----- Sidenote ----- //

.has-sidenote
  line-height: percentage( $b-lineHeight )
  position: relative

  +respond-to( $g-m )
    line-height: percentage( $b-lineHeight--m )

// ----- Sidenotes ----- //

.has-sidenotes

  +respond-to( $g-l )

    [id^='fnref']
      display: none

    .footnotes
      display: none

// -------------------------------------
//   Scaffolding
// -------------------------------------

// ----- Marker ----- //

[ id^='fnref' ]

  &::before
    content: '\00a0'
    font-size: 50%

  > a
    letter-spacing: 1px

    &::before
      content: '['

    &::after
      content: ']'

// ----- Footnotes ----- //

.post .footnotes
  @extend .pillar
  +font-size-s
  margin-top: $b-space-l

  > hr
    display: none

  > ol
    margin-bottom: 0

  li:last-of-type
    margin-bottom: 0

  p:last-of-type
    margin-bottom: 0

// ----- Lead ----- //

.post-lead
  font-weight: $b-fontWeight-bold
  letter-spacing: 0.1em
  opacity: 0.95
  text-transform: uppercase

// ----- Sidenote ----- //

.post-sidenote
  +font-size-s
  box-sizing: border-box
  color: $c-subdue
  display: none
  font-style: italic
  left: 100%
  margin-left: $g-gutter * 2
  padding-right: $g-gutter * 0.5
  position: absolute
  top: 0
  width: percentage( 1 / 2 )
  z-index: 1

  +respond-to( $g-l )
    display: block

